# hunter-futures-pro

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE_SPEC-074_Guardrails.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT.md  README.md  ROADMAP.md  VERSION  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt
.wrongstack/: AGENTS.md
config/: data.yaml  local.example.yaml
docs/: MVP_INDEX.md
examples/: freqtrade-pairlist-config.json  hunter-pairs.json  ranking-input-v1.json  ranking-input-v2.json
scripts/: repository_hygiene_check.py
specs/: SPEC-001-Agent-First-Hunter-Futures-Foundation.md  SPEC-002-MVP-1-Data-Foundation.md  SPEC-003-Market-State-Regime-Breadth.md  SPEC-004-Decision-Layer.md  SPEC-005-Execution-Bridge-Freqtrade.md  SPEC-006-Freqtrade-Integration.md  SPEC-007-Freqtrade-Strategy-Contract.md  SPEC-008-Freqtrade-Dry-Run-Strategy-Adapter.md  SPEC-009-Freqtrade-Deployable-Dry-Run-Strategy.md  SPEC-010-Freqtrade-Dry-Run-Strategy-Shell.md  SPEC-011-Dry-Run-Research-Observation-Reports.md  SPEC-012-Operator-Review-Workflow.md  SPEC-013-Local-Review-Index.md  SPEC-014-Local-Review-Search-Query-Layer.md  SPEC-015-Local-Research-Bundle-Evidence-Pack.md  SPEC-016-Local-Research-Chronicle-Audit-Timeline.md  SPEC-017-Local-Research-Digest-Executive-Summary.md  SPEC-018-Local-Research-Quality-Gate-Audit-Readiness.md  SPEC-019-Local-Research-Handoff-Packet.md  SPEC-020-Local-Research-Archive-Manifest.md  SPEC-021-Local-Research-Release-Notes-Audit-Change-Summary.md  SPEC-022-Local-Research-Audit-Catalog.md  SPEC-023-Local-Research-Audit-Closure-Report.md  SPEC-024-Local-Research-Audit-Snapshot.md  SPEC-025-Relative-Strength-Engine.md  SPEC-026-Open-Interest-Engine.md  SPEC-027-Discovery-Engine.md  SPEC-028-Portfolio-Construction-Engine.md  SPEC-029-Local-Research-Backtesting-Engine.md  SPEC-030-Local-Research-Reporting-CLI.md  SPEC-031-Local-Research-Run-Orchestrator.md  SPEC-032-Local-Research-Experiment-Ledger.md  SPEC-033-Local-Research-Final-Audit-Pack-Export.md  SPEC-034-Local-Research-Release-Hardening-Consistency-Audit.md  SPEC-035-Local-Research-Evidence-Traceability-Matrix.md  SPEC-036-Local-Research-Audit-Readiness-Scorecard.md  SPEC-037-Local-Research-Cross-Pack-Consistency-Validator.md  SPEC-038-Local-Research-Remediation-Backlog-Planner.md  SPEC-039-Local-Research-Remediation-Evidence-Tracker.md  (+32 more)
(+848 files in other folders)
